# redteam-core

./: .gitignore  README.md  pyproject.toml  sample_report.html
runs/: layer1_report_20260528_143439.json  layer1_report_20260528_143806.json  layer1_report_20260528_145312.json  layer1_report_20260528_151048.json
src/redteam/: __init__.py  cli.py  orchestrator.py  report.py  report_html.py  utils.py
src/redteam/attacks/: __init__.py  env_requirements.py  injection.py  minja.py  multi_turn.py  pair.py  poisoned_runtime.py  tmap.py
src/redteam/env_pipeline/: __init__.py  adapter.py  env_generator.py  executor.py
src/redteam/env_pipeline/templates/: __init__.py  base.py  data_corruption.py  data_exfiltration.py  memory_poisoning.py  unauthorized_action.py
src/redteam/evaluation/: __init__.py  deterministic.py  judge.py
src/redteam/models/: __init__.py  attacks.py  environment.py  report.py  risk.py
src/redteam/risk_pipeline/: __init__.py  goal_generator.py  risk_generator.py  triage.py
src/redteam/runtime/: __init__.py  base.py  chat_completions.py  responses_api.py
tests/integration/: test_end_to_end.py
tests/real/: test_real_pipeline.py
tests/unit/: test_env_pipeline.py  test_models.py  test_pair.py  test_remaining_attacks.py  test_risk_pipeline.py  test_tmap.py
