[project]
name = "redteam-core"
version = "0.1.0"
description = "Systematic, layered agent red-teaming framework"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.80.0",
    "sentence-transformers>=3.0",
    "torch",
    "pyyaml>=6.0",
    "rich>=13.0",
    "python-Levenshtein",
    "click>=8.0",
]

[project.scripts]
redteam-run = "redteam.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.3.0",
    "mypy>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/redteam"]

[tool.uv]
managed = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["F", "UP", "I", "ERA", "N", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s %(name)s %(levelname)s %(message)s"
log_cli_date_format = "%H:%M:%S"
